tests/cmp/dc-label-missing-semicolon.golden
Parse Error:
tests/cmp/dc-label-missing-semicolon.trp:1:33 unexpected token TokenSym "bob"
