tests/cmp/dc-label-missing-semicolon.trp
let val x = 42 raisedTo `<alice bob>`
in printWithLabels x
end